# Photovoltaik-Monitoring---Clear-Sky-Day-Finder

./: README.md  pyproject.toml
src/clearskydayfinder/: __init__.py  clearskydayfinder.py
